End of create project route... not working

--- a/views/base_generic.html
+++ b/views/base_generic.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Motor</title>
     <link href="/static/output.css" rel="stylesheet">
+    <script src="/static/htmx.min.js"> </script>
     <!--<script src="https://unpkg.com/hyperscript.org@0.9.12"></script>
     <link rel="stylesheet" href="https://unpkg.com/missing.css@v0.2.1/missing.min.css">
     <link rel="stylesheet" href="https://unpkg.com/missing.css@v0.2.1/missing-prism.min.css">-->
